* Did some serious reworking of the header area. As always, it's a WIP, so feel free to share your ideas to improve on it (or just revert to what it was before.) Haven't tested in Pastel, I'm sure it'll be fun to see how broken it is. (index.template.php, Warm/index.css, images/theme/bg.jpg) * Rewrote the cat bar and title bar to something else. Me likey. - Don't waste time and bandwidth showing a clickable link on categories. They already have a collapse button next to them, that should be enough. Who uses collapsing anyway? (Subs-BoardIndex.php) * Don't use windowbg overrides in the board list. Too many colors can kill the fun, really. (BoardIndex.template.php) - Don't show the website's name next to "Info Center". The website's name is already in big large letters in the header. What's the point. (BoardIndexInfoCenter.template.php, index.english.php, index.french.php) * The Search icon in the menu is off by one pixel. Or am I crazy? (Warm/index.css) ! Fixed issues with the channels() function. (Class-CSS.php) + Added ability to group properties together if they have the same value, e.g. "height, line-height: 20px". (Class-CSS.php, Warm/index.css) * Various CSS tweaks. (Warm/index.css, Warm/sections.css, BoardIndexInfoCenter.template.php)

--- a/Themes/default/css/Warm/sections.css
+++ b/Themes/default/css/Warm/sections.css
@@ -11,7 +11,7 @@
 	td.info a.subject
 		font-weight: bold
 		font-size: 110%
-		color: #d97b33
+		color: $board_col
 	td.children
 		color: #555
 		font-size: 85%
@@ -78,7 +78,6 @@ p.moderators
 /* Styles for the info center on the board index.
 ---------------------------------------------------- */
 #upshrinkHeaderIC
-	margin-top: 4px
 	p
 		margin: 0 0 .5em
 		padding: .5em
@@ -93,6 +92,9 @@ p.moderators
 		&.stats
 			font-size: 1.1em
 			padding-top: 8px
+		&.pminfo
+			margin: 0
+			padding: .5em
 
 #ic_recentposts
 	margin: 0 0 .5em
@@ -1359,12 +1361,13 @@ span.hidelink
 	p.clear
 		clear: both
 
+#search_options
+	margin: 0 auto
+	width: 600px
+	padding-top: 1em
+	overflow: hidden
+
 #advanced_search
-	#search_options
-		margin: 0 auto
-		width: 600px
-		padding-top: 1em
-		overflow: hidden
 	dt
 		clear: both
 		float: left
@@ -1391,13 +1394,9 @@ span.hidelink
 
 /* More hacks.
 ------------------------------------------------- */
-#upshrinkHeaderIC
-	p.pminfo
-		margin: 0
-		padding: .5em
-
 #upshrink_ic
 	float: right
+	display: none
 	margin: 4px -5px 0 0
 
 // table_grid styles for Profile > Show Permissions.
